Ajuste para subir o ghp

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
         run: dotnet publish Blazor.GHP.csproj -c Release -o release --nologo
 
       # changes the base-tag in index.html from '/' to 'blazor-ghp' to match GitHub Pages repository subdirectory
-      - name: Change base-tag in index.html from / to blazor-ghp
-        run: sed -i 's/<base href="\/" \/>/<base href="\/blazor-ghp\/" \/>/g' release/wwwroot/index.html
+      # - name: Change base-tag in index.html from / to blazor-ghp
+      #   run: sed -i 's/<base href="\/" \/>/<base href="\/blazor-ghp\/" \/>/g' release/wwwroot/index.html
 
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
